--- a/_config.yml
+++ b/_config.yml
@@ -92,11 +92,11 @@ theme_mode: # [light | dark]
 # Notice that once it is assigned, the CDN url
 # will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
 #
-# e.g. 'https://cdn.com'
+# e.g. ''
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "\assets\img\common\avatar.png"
+avatar: "/assets/img/commons/avatar.jpg"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
