--- a/_config.yml
+++ b/_config.yml
@@ -93,10 +93,10 @@ theme_mode: # [light | dark]
 # will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn: ""
+cdn: 
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/assets/img/commons/avatar.jpg"
+avatar: /assets/img/commons/avatar.jpg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
