--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: WeiguoLu # the main title
+title: Vigor Lu # the main title
 
 tagline: 悄咪咪的整活🤓🤓 # it will display as the sub-title
 
