--- a/_config.yml
+++ b/_config.yml
@@ -168,6 +168,9 @@ collections:
   tabs:
     output: true
     sort_by: order
+   notes:
+    output: true
+    sort_by: name
 
 defaults:
   - scope:
@@ -194,7 +197,13 @@ defaults:
       path: assets/js/dist
     values:
       swcache: true
-
+# reading-notes
+  - scope:
+        path: "_notes"
+        type: notes
+     values:
+        layout: reading-note
+        permalink: /reading-notes/:title/
 sass:
   style: compressed
 
