--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ theme: jekyll-theme-chirpy
 lang: zh-CN
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone: 
+timezone:
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
 title: Vigor Lu # the main title
 
-tagline: 悄咪咪的整活🤓🤓 # it will display as the sub-title
+tagline: 3D HMI Engineer🤓🤓 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   GLSL,卢伟国,TA,技术美术.
@@ -36,7 +36,7 @@ social:
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: WeiGuoLu
   email: luweiguo21@Gmain.com # change to your email address
-  links: 
+  links:
     # The first element serves as the copyright owner's link
     - https://space.bilibili.com/1974465?spm_id_from=333.999.0.0 # change to your twitter homepage
     #- https://github.com/username # change to your github homepage
@@ -93,7 +93,7 @@ theme_mode: # [light | dark]
 # will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-cdn: 
+cdn:
 
 # the avatar on sidebar, support local or CORS resources
 avatar: /assets/img/commons/avatar.jpg
